- Add SaveDialog.
- Add save to CEL.
- Add export to CEL.
- Ask for color fit when loading a CEL file.
- Add gradients.
- Hide menu when not needed.
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.23
- Code cleanup in MainUnit.
- When you release CEL, all menus requiring active CEL are disabled.
- When you get or load a CEL, all menus requiring active CEL are enabled.

2023.03.22
- Modal dialogs are reworked, less code to create a new one.
- Fix in rotate, 180 and 270 crashed.
- Modal dialog units are merged into one file.

2023.03.21
- Some tools didn't clear the Infobar after them. Fixed.
- Rotate CEL dialog appears when selecting CEL/Rotate. You can select the amount
  to rotate by the buttons, or pressing keys 1..3. Clicking "OK" or pressing Enter
  will rotate the CEL, "Cancel" will close the dialog without doing anything.

2023.03.20
- Undo/Redo buttons now uses OnClick event instead of the MessageQueue.
- SubMenuItems now can be disabled. (Appears in grey and remains grey when the
  mouse points it.)
- File/Quit works, but it quits instantly without asking anything.
- Added CELSHOW tool. It shows CEL for a short interval (1s). Useful after
  loading or modifying cel.
- The loaded CEL is always moved to 0,0. After loading CEL the CEL is visible
  for a short time.
- Fix: MessageQueue.AddMessage still accepted string value but did nothing with it.
- CEL/Flip V and CEL/Flip H works.
- Magnify CEL dialog appears when selecting CEL/Magnify. Dialog items work, but
  CEL is not magnified when OK clicked. You can use key 2, 3 and 5 to select
  magnification, Enter to "OK" and Escape to "Cancel".
- Magnification works.
- PutCEL now shows CEL's top-left coordinate and the relative position to
  original place.

2023.03.19
- Fix: When right clicked on drawarea to cancel color picking, ToggleControls
  also occured.
- Fix: When right clicked to cancel any tool, ToggleControls also occured.