@@ -17,6 +17,7 @@ Todo:
 - Code cleanup in MainUnit.
 - When you release CEL, all menus requiring active CEL are disabled.
 - When you get or load a CEL, all menus requiring active CEL are enabled.
+- Under the hood: MouseObjects only calls draw for visible objects.
 
 2023.03.22
 - Modal dialogs are reworked, less code to create a new one.
